--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-iframe": "^1.8.5",
+    "react-player": "^2.16.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
