--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react-player": "^2.16.0",
     "react-router-dom": "5",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.13",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^6.1.13"
   },
   "scripts": {
     "start": "react-scripts start",
